[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/npcObjects/000001/sprite/stand1_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/npcObjects/000001/sprite/stand1_3.png" type="Texture" id=2]
[ext_resource path="res://scenes/npcObjects/000001/sprite/stand1_2.png" type="Texture" id=3]
[ext_resource path="res://scenes/npcObjects/000001/sprite/stand1_0.png" type="Texture" id=4]
[ext_resource path="res://scenes/npcObjects/000001/000001.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 38.5 )

[node name="Area2D" type="Area2D"]
collision_layer = 4097
collision_mask = 4097
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
playing = true

[node name="Label" type="Label" parent="."]
margin_left = -18.0
margin_top = 39.0
margin_right = 22.0
margin_bottom = 53.0
text = "kebin"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -1.5 )
shape = SubResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
